ligolang/src/test/contracts/negative/missing_funarg_annotation.religo
/* these should give a missing type annotation error */
let a = b => b
let a = (b,c) => b
let a = ((b)) => b
